fix spacing issues3

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 
 .app {
   background-color: #f5f5f5;
-  height: 400px;
+  /* height: 550px; */
   width: 90%;
   max-width: 800px;
   border-radius: 5px;
@@ -94,3 +94,4 @@ body {
 .count-rolls{
   margin-bottom: 0.5em;
 }
+
